changed flare--11 position to prevent overflow

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -88,7 +88,7 @@
 }
 
 .flare--11 {
-  bottom: -500%;
+  bottom: -450%;
   left: 50%;
 }
 
